--- a/bower.json
+++ b/bower.json
@@ -35,16 +35,18 @@
     "seajs": "~2.3.0"
   },
   "dependencies": {
-    "bootstrap": "~3.3.4",
-    "angular": "~1.3.15",
-    "angular-bootstrap": "~0.12.1",
-    "angular-ui-codemirror": "~0.2.3",
-    "codemirror": "~4.8.0",
+    "angular": "~1.5.8",
+    "angular-animate": "~1.5.8",
+    "angular-touch": "~1.5.8",
+    "bootstrap": "~3.3.5",
+    "codemirror": "~5.0",
+    "angular-ui-codemirror": "~0.3.0",
     "marked": "git://github.com/chjj/marked.git#master",
     "hotbox": "~1.0.2",
     "color-picker": "~1.0.2",
     "kity": "^2.0.5",
-    "json-diff": "*"
+    "json-diff": "*",
+    "worktile-ui-bootstrap": "https://github.com/worktile/bootstrap.git#2.6.1"
   },
   "overrides": {
     "codemirror": {
@@ -62,6 +64,7 @@
     }
   },
   "resolutions": {
-    "angular": "~1.3.8"
+    "angular": "~1.5.8",
+    "codemirror": "~5.0"
   }
 }
